# CubicEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
Engine/: CMakeLists.txt
Engine/include/cubic/: cubic.h  platform.h
Engine/include/cubic/core/: application.h  log.h  window.h
Engine/include/cubic/graphic/: geometry.h  material.h  mesh.h  scene.h  transform.h
Engine/include/cubic/graphic/material/: color_material.h
Engine/include/cubic/render/: bind_group.h  buffer.h  command_buffer.h  command_queue.h  pipeline_layout.h  render_pass.h  render_pipeline.h  render_system.h  renderer.h  sampler.h  shader_module.h  texture.h  types.h
Engine/src/core/: application.cc  log.cc  window_impl.cc  window_impl.h
Engine/src/core/mtl/: window_impl_mtl.h  window_impl_mtl.mm
Engine/src/core/vk/: swap_chain.cc  swap_chain.h  window_impl_vk.cc  window_impl_vk.h
Engine/src/graphic/: box_geometry.cc  mesh.cc  plane_geometry.cc  scene.cc  shader_generator.cc  shader_generator.h  stage_buffer.cc  stage_buffer.h  transform.cc
Engine/src/graphic/material/: color_material.cc
Engine/src/render/: pipeline_layout_priv.h  render_system_priv.cc  render_system_priv.h  renderer.cc  shader_compiler.cc  shader_compiler.h  types.cc
Engine/src/render/mtl/: bind_group_mtl.h  bind_group_mtl.mm  buffer_mtl.h  buffer_mtl.mm  command_buffer_mtl.h  command_buffer_mtl.mm  command_queue_mtl.h  command_queue_mtl.mm  mtl_types.h  mtl_types.mm  pipeline_layout_mtl.h  pipeline_layout_mtl.mm  render_pass_mtl.h  render_pass_mtl.mm  render_pipeline_mtl.h  render_pipeline_mtl.mm  render_system_info_mtl.h  render_system_mtl.h  render_system_mtl.mm  shader_module_mtl.h  shader_module_mtl.mm  texture_mtl.h  texture_mtl.mm
Engine/src/render/vk/: bind_group_vk.cc  bind_group_vk.h  buffer_vk.cc  buffer_vk.h  command_buffer_vk.cc  command_buffer_vk.h  command_queue_vk.cc  command_queue_vk.h  pipeline_layout_vk.cc  pipeline_layout_vk.h  render_pass_vk.cc  render_pass_vk.h  render_pipeline_vk.cc  render_pipeline_vk.h  render_system_info_vk.h  render_system_vk.cc  render_system_vk.h  shader_module_vk.cc  shader_module_vk.h  texture_vk.cc  texture_vk.h  vulkan_device.cc  vulkan_device.h  vulkan_types.cc  vulkan_types.h
Engine/src/render/vk/util/: attachment_builder.cc  attachment_builder.h
Engine/src/slang/: attribute.cc  attribute.h  function.cc  function.h  node.h  operation.cc  operation.h  program.cc  program.h  statement.cc  statement.h  types.cc  types.h  uniform.cc  uniform.h
Sandbox/: CMakeLists.txt  main.cc  renderer_test.cc  shader_generator_test.cc
